--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,8 +47,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=11
-javac.target=11
+javac.source=24
+javac.target=24
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -78,7 +78,7 @@ main.class=poiupv.PoiUPVApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_21
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
