--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AplicacionNavegacion
 endorsed.classpath=
 excludes=
+file.reference.IPC2025.jar=C:\\Users\\LERI\\OneDrive - UPV\\Documentos\\UPV\\3r Curso\\1r Cuatri\\IPC\\Proyecto\\lib\\lib\\IPC2025.jar
+file.reference.sqlite-jdbc-3.49.1.0.jar=C:\\Users\\LERI\\OneDrive - UPV\\Documentos\\UPV\\3r Curso\\1r Cuatri\\IPC\\Proyecto\\lib\\lib\\sqlite-jdbc-3.49.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JAVAFX.classpath}
+    ${libs.JAVAFX.classpath}:\
+    ${file.reference.IPC2025.jar}:\
+    ${file.reference.sqlite-jdbc-3.49.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
