--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,14 +35,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AplicacionNavegacion
 endorsed.classpath=
 excludes=
-file.reference.IPC2025.jar=C:\\Users\\LERI\\OneDrive - UPV\\Documentos\\UPV\\3r Curso\\1r Cuatri\\IPC\\Proyecto\\lib\\lib\\IPC2025.jar
-file.reference.sqlite-jdbc-3.49.1.0.jar=C:\\Users\\LERI\\OneDrive - UPV\\Documentos\\UPV\\3r Curso\\1r Cuatri\\IPC\\Proyecto\\lib\\lib\\sqlite-jdbc-3.49.1.0.jar
+file.reference.IPC2025.jar=lib/lib/IPC2025.jar
+file.reference.IPC2025.jar-1=lib/IPC2025.jar
+file.reference.sqlite-jdbc-3.49.1.0.jar=lib/lib/sqlite-jdbc-3.49.1.0.jar
+file.reference.sqlite-jdbc-3.49.1.0.jar-1=lib/sqlite-jdbc-3.49.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JAVAFX.classpath}:\
-    ${file.reference.IPC2025.jar}:\
-    ${file.reference.sqlite-jdbc-3.49.1.0.jar}
+    ${file.reference.IPC2025.jar-1}:\
+    ${file.reference.sqlite-jdbc-3.49.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -92,7 +94,9 @@ run.classpath=\
 run.jvmargs=--add-modules javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}:\
-    ${libs.JAVAFX.classpath}
+    ${libs.JAVAFX.classpath}:\
+    ${file.reference.IPC2025.jar}:\
+    ${file.reference.sqlite-jdbc-3.49.1.0.jar}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
