--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AplicacionNavegacion
 endorsed.classpath=
 excludes=
-file.reference.IPC2025.jar=lib/lib/IPC2025.jar
 file.reference.IPC2025.jar-1=lib/IPC2025.jar
-file.reference.sqlite-jdbc-3.49.1.0.jar=lib/lib/sqlite-jdbc-3.49.1.0.jar
 file.reference.sqlite-jdbc-3.49.1.0.jar-1=lib/sqlite-jdbc-3.49.1.0.jar
 includes=**
 jar.compress=false
@@ -148,8 +146,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.JAVAFX.classpath}:\
-    ${file.reference.IPC2025.jar}:\
-    ${file.reference.sqlite-jdbc-3.49.1.0.jar}
+    ${file.reference.IPC2025.jar-1}:\
+    ${file.reference.sqlite-jdbc-3.49.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -199,7 +197,9 @@ run.classpath=\
 run.jvmargs=--add-modules javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}:\
-    ${libs.JAVAFX.classpath}
+    ${libs.JAVAFX.classpath}:\
+    ${file.reference.IPC2025.jar-1}:\
+    ${file.reference.sqlite-jdbc-3.49.1.0.jar-1}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
